--- a/index.html
+++ b/index.html
@@ -54,9 +54,24 @@
             <section id="offer">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-6 offer">
                             <h1 class="offer__header animation">Профессиональный монтаж и ремонт<br>котельного оборудования</h1>
                             <h2 class="offer__subheader animation">Под ключ с гарантией 1 год</h2>
+                            
+                        </div>
+                        <div class="col-md-6 needs animation">
+                            <ul class="offer__needs">
+                                <li>Хотите отремонтировать котельное оборудование?</li>
+                                <li>Необходима перестройка и перепланировка котельной?</li>
+                                <li>Нужно перевести паровой котел на водогрейный режим?</li>
+                                <li>Необходима антикоррозийная защита поверхностей?</li>
+                                <li>Желаете заменить топочные и конвективные трубы паровых котлов?</li>
+                                <li class="offer__last-need">Мы быстро и качественно решим эти вопросы!</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
                             <form method="post" class="offer__form animation">
                                 <h3 class="offer__form-header">Оставьте заявку сейчас<br>и получите бесплатную консультацию<br>и расчёт стоимости работ</h3>
                                 <div class="offer__form-col">
