--- a/var_1.html
+++ b/var_1.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="css/vendor/bootstrap.min.css"/>
         <link rel="stylesheet" href="css/vendor/slick.css"/>
         <link rel="stylesheet" href="css/vendor/slick-theme.css"/>
-        <link rel="stylesheet" href="css/style.css"/>
+        <link rel="stylesheet" href="css/style_var_1.css"/>
     </head>
     <body>
         <header>
